--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "printWidth": 80,
-  "trailingCommas": "none",
+  "trailingComma": "all",
   "tabWidth": 2,
+  "endOfLine": "lf",
   "singleQuote": true
 }
