--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
@@ -14,6 +14,7 @@
     "concurrently": "^6.0.0",
     "dayjs": "^1.10.4",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -24,11 +25,12 @@
     "start": "craco start",
     "start-https": "HTTPS=true craco start",
     "build": "craco build",
-    "test": "craco test",
+    "test": "craco test --watchAll=false",
     "eject": "craco eject",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier",
-    "coverage": "npm test -- --coverage",
+    "coverage": "npm test -- --coverage --watchAll=false",
+    "format": "prettier --write \"**/*.+(js|json|css|html|ts|tsx)\"",
+    "check": "prettier --check \"**/*.+(js|json|css|html|ts|tsx)\"",
     "prepare": "husky install"
   },
   "browserslist": {
@@ -43,14 +45,11 @@
       "last 1 safari version"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged && npm run lint"
-    }
-  },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.4",
+    "@testing-library/dom": "^7.30.3",
     "@types/lodash": "^4.14.168",
+    "@types/lodash-es": "^4.17.4",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
@@ -59,10 +58,24 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
-    "husky": "^6.0.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "postcss": "^7.0.35",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^lodash-es/(.*)$": "lodash/$1"
+    }
+  },
+  "lint-staged": {
+    "*.tsx": "prettier --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && yarn format && yarn check && yarn test"
+    }
   }
 }
