--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     ]
   },
   "lint-staged": {
-    "*.{js,ts,tsx,md,css}": [
+    "*.{js,ts,tsx,css}": [
       "yarn format",
       "yarn lint",
       "yarn run check",
