--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -54,25 +54,21 @@ jobs:
             build
 
   deploy:
-    name: "Deploy"
+    name: 'Deploy'
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: ⏬ Download build artifacts from build job
-        uses: actions/download-artifact@v2
+      - uses: actions/checkout@v2
+      - uses: amondnet/vercel-action@v20
         with:
-          name: build
-      - uses: actions/checkout@v1
-      - uses: netlify/actions/cli@master
-        env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        with:
-          args: deploy --dir=build --prod
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
+          vercel-args: '--prod' #Optional
+          vercel-org-id: ${{ secrets.ORG_ID}} #Required
+          vercel-project-id: ${{ secrets.PROJECT_ID}} #Required
+          working-directory: ./sub-directory
 
   codecov:
-    name: "Coverage"
+    name: 'Coverage'
     runs-on: ubuntu-latest
     needs: deploy
     steps:
