--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.4",
+    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "@types/lodash": "^4.14.168",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
