--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-weather-ts",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
-    "@craco/craco": "^6.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -21,14 +21,12 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "start": "craco start",
-    "start-https": "HTTPS=true craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
+    "dev": "vite",
+    "build": "vite build",
+    "test": "jest",
+    "coverage": "jest -- --coverage",
     "lint": "eslint src --ext tsx",
-    "prettier": "prettier",
-    "coverage": "npm test -- --coverage"
+    "prettier": "prettier"
   },
   "browserslist": {
     "production": [
@@ -43,19 +41,22 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "@types/lodash": "^4.14.168",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "autoprefixer": "^9.8.6",
+    "@vitejs/plugin-react": "^1.1.4",
+    "autoprefixer": "^10.4.2",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "babel-preset-vite": "^1.0.4",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
-    "postcss": "^7.0.35",
+    "postcss": "^8.4.5",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4"
+    "tailwindcss": "^3.0.18",
+    "vite": "^2.7.13"
   }
 }
