--- a/package.json
+++ b/package.json
@@ -2,35 +2,14 @@
   "name": "anga",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^6.1.1",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.1",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "concurrently": "^6.0.0",
-    "dayjs": "^1.10.4",
-    "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.2.3"
-  },
+  "license": "MIT",
   "scripts": {
-    "start": "craco start",
-    "start-https": "HTTPS=true craco start",
-    "build": "craco build",
-    "test": "craco test --watchAll=false",
-    "eject": "craco eject",
+    "dev": "vite",
+    "build": "vite build",
+    "test": "jest",
+    "coverage": "jest -- --coverage",
     "lint": "eslint src --ext tsx",
-    "coverage": "craco test --coverage --watchAll=false",
-    "format": "prettier --write \"**/*.+(js|json|css|html|ts|tsx)\"",
-    "check": "prettier --check \"**/*.+(js|json|css|html|ts|tsx)\"",
+    "prettier": "prettier",
     "prepare": "husky install"
   },
   "browserslist": {
@@ -45,41 +24,47 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "concurrently": "^6.0.0",
+    "dayjs": "^1.10.4",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.3"
+  },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^2.0.4",
-    "@testing-library/dom": "^7.30.3",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.168",
     "@types/lodash-es": "^4.17.4",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "autoprefixer": "^9.8.6",
-    "eslint": "^7.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "@vitejs/plugin-react": "^1.1.4",
+    "autoprefixer": "^10.4.2",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
+    "babel-preset-vite": "^1.0.4",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
-    "husky": ">=6",
-    "lint-staged": ">=10",
-    "postcss": "^8.2.10",
+    "husky": "^7.0.0",
+    "jest": "^27.4.7",
+    "postcss": "^8.4.5",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/components/*.tsx",
-      "!<rootDir>/node_modules/**/*",
-      "!<rootDir>/src/setupTests*"
-    ],
-    "coverageReporters": [
-      "lcov"
-    ],
-    "moduleNameMapper": {
-      "^lodash-es/(.*)$": "lodash/$1"
-    },
-    "testMatch": [
-      "**/__tests__/*.tsx"
-    ]
+    "tailwindcss": "^3.0.18",
+    "ts-jest": "^27.1.3",
+    "vite": "^2.7.13"
   },
   "lint-staged": {
     "*.{js,ts,tsx,css}": [
